--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name">name</string>
     <string name="title_profile">profile</string>
-    <string name="sort">sort</string>
+    <string name="sort">Сортировка</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
 </resources>
